[gd_scene load_steps=7 format=2]

[ext_resource path="res://goat/helper_scenes/InventoryItems.gd" type="Script" id=1]
[ext_resource path="res://goat/styles/inventory_slot_hover.tres" type="StyleBox" id=2]
[ext_resource path="res://goat/styles/inventory_slot_focus.tres" type="StyleBox" id=3]
[ext_resource path="res://goat/styles/inventory_slot_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://goat/styles/inventory_slot_disabled.tres" type="StyleBox" id=5]

[sub_resource type="ButtonGroup" id=1]
resource_name = "InventoryButtons"

[node name="InventoryItems" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0
margin_bottom = -10.0
script = ExtResource( 1 )

[node name="TopBar" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 68.0
alignment = 1

[node name="Button0" type="Button" parent="TopBar"]
margin_left = 226.0
margin_right = 294.0
margin_bottom = 68.0
rect_min_size = Vector2( 68, 68 )
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
disabled = true
toggle_mode = true
enabled_focus_mode = 0
group = SubResource( 1 )
clip_text = true

[node name="Button1" type="Button" parent="TopBar"]
margin_left = 298.0
margin_right = 366.0
margin_bottom = 68.0
rect_min_size = Vector2( 68, 68 )
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
disabled = true
toggle_mode = true
enabled_focus_mode = 0
group = SubResource( 1 )
clip_text = true

[node name="Button2" type="Button" parent="TopBar"]
margin_left = 370.0
margin_right = 438.0
margin_bottom = 68.0
rect_min_size = Vector2( 68, 68 )
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
disabled = true
toggle_mode = true
enabled_focus_mode = 0
group = SubResource( 1 )
clip_text = true

[node name="Button3" type="Button" parent="TopBar"]
margin_left = 442.0
margin_right = 510.0
margin_bottom = 68.0
rect_min_size = Vector2( 68, 68 )
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
disabled = true
toggle_mode = true
enabled_focus_mode = 0
group = SubResource( 1 )
clip_text = true

[node name="Button4" type="Button" parent="TopBar"]
margin_left = 514.0
margin_right = 582.0
margin_bottom = 68.0
rect_min_size = Vector2( 68, 68 )
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
disabled = true
toggle_mode = true
enabled_focus_mode = 0
group = SubResource( 1 )
clip_text = true

[node name="Button5" type="Button" parent="TopBar"]
margin_left = 586.0
margin_right = 654.0
margin_bottom = 68.0
rect_min_size = Vector2( 68, 68 )
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
disabled = true
toggle_mode = true
enabled_focus_mode = 0
group = SubResource( 1 )
clip_text = true

[node name="Button6" type="Button" parent="TopBar"]
margin_left = 658.0
margin_right = 726.0
margin_bottom = 68.0
rect_min_size = Vector2( 68, 68 )
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
disabled = true
toggle_mode = true
enabled_focus_mode = 0
group = SubResource( 1 )
clip_text = true

[node name="Button7" type="Button" parent="TopBar"]
margin_left = 730.0
margin_right = 798.0
margin_bottom = 68.0
rect_min_size = Vector2( 68, 68 )
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
disabled = true
toggle_mode = true
enabled_focus_mode = 0
group = SubResource( 1 )
clip_text = true

[node name="BottomBar" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -68.0
alignment = 1

[node name="BackButton" type="Button" parent="BottomBar"]
margin_left = 442.0
margin_right = 510.0
margin_bottom = 68.0
rect_min_size = Vector2( 68, 68 )
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
enabled_focus_mode = 0
text = "Back"

[node name="UseButton" type="Button" parent="BottomBar"]
margin_left = 514.0
margin_right = 582.0
margin_bottom = 68.0
rect_min_size = Vector2( 68, 68 )
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
disabled = true
enabled_focus_mode = 0
text = "Use"

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="EmptyInventoryText" type="Label" parent="CenterContainer"]
margin_left = 399.0
margin_top = 283.0
margin_right = 625.0
margin_bottom = 297.0
text = "There are no items in the inventory"
[connection signal="pressed" from="BottomBar/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="BottomBar/UseButton" to="." method="_on_UseButton_pressed"]
